Fixed missing parameters.

--- a/transcode/ultrafast720p30fps.properties
+++ b/transcode/ultrafast720p30fps.properties
@@ -148,13 +148,13 @@ v.e.default.h264.dict.sliced_threads=0
 #===================================================================================================
 # These are the default filter graph options for encoding to h264.
 #===================================================================================================
-v.e.default.h264.deinterlace_filter=yadif=mode=0, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bicubic, format=pix_fmts=yuv420p, fps=fps=opendct_dfps:round=near
+v.e.default.h264.deinterlace_filter=yadif=mode=0, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bicubic, format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
 
 v.e.default.h264.progressive_filter=scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bicubic, format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
 
 v.e.w1280.h720.h264.progressive_filter=format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
 
-v.e.w1920.h1080.h264.deinterlace_filter=yadif=mode=0, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bicubic, format=pix_fmts=yuv420p, fps=fps=opendct_dfps:round=near
+v.e.w1920.h1080.h264.deinterlace_filter=yadif=mode=0, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bicubic, format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
 
 #===================================================================================================
 # These are the weights for encoding.
