--- a/transcode/ultrafast720p.properties
+++ b/transcode/ultrafast720p.properties
@@ -154,7 +154,7 @@ v.e.default.h264.progressive_filter=scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)
 
 v.e.w1280.h720.h264.progressive_filter=format=pix_fmts=yuv420p, fps=fps=opendct_fps:round=near
 
-v.e.w1920.h1080.h264.deinterlace_filter=yadif=mode=1, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bicubic, format=pix_fmts=yuv420p
+v.e.w1920.h1080.h264.deinterlace_filter=yadif=mode=1, scale=w='trunc(oh*a/16)*16':h='min(720\\,ih)':interl=0:flags=bicubic, format=pix_fmts=yuv420p, fps=fps=opendct_dfps:round=near
 
 #===================================================================================================
 # These are the weights for encoding.
