--- a/transcode/profile_example.properties
+++ b/transcode/profile_example.properties
@@ -42,7 +42,7 @@ g.conf.disable=false
 # 3) If v.conf.t.always=true => Transcode
 # 4) If v.conf.t.transcode_gt_h < video height and v.conf.t.transcode_gt_w < video width => Continue
 # 5) If v.conf.t.codec_map.mpeg2video=libx264 and the source is mpeg2 => Transcode
-# 6) If v.conf.t.deinterlace_only=true => Transcode
+# 6) If v.conf.t.deinterlace_only=true and the source is interlaced => Transcode
 
 # If this is set, transcoding can only happen when the video is greater than this height.
 #v.conf.t.allow_gt_h=720
