--- a/transcode/ultrafast720p.properties
+++ b/transcode/ultrafast720p.properties
@@ -28,7 +28,7 @@ g.conf.always_reload=false
 # This is the profile name to be displayed. When referencing this profile in opendct.properties, use
 # the name of this file without the .properties extension.
 g.conf.friendly_name=Ultra High Speed
-g.conf.description=The fastest tested settings with content scaling to 720p.
+g.conf.description=Fastest settings with scaling to 720p 60fps. Unscaled 720p video is 60fps.
 
 # Change this value to true to disable transcoding on all capture devices using this profile. This
 # effectively will cause all video streams to be copied instead.
