HDHomeRun discovery port is now configurable.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -2,13 +2,22 @@
 channels.qam.automap_reference_lookup=true
 channels.qam.automap_tuning_lookup=false
 channels.update=true
-discovery.exp_enabled=false
+discovery.exp_enabled=true
 hdhr.allow_http_tuning=true
+hdhr.allow_qam_http_tuning=true
 hdhr.always_tune_legacy=false
+hdhr.broadcast_port=64998
+hdhr.broadcast_s=58
 hdhr.discoverer_enabled=true
+hdhr.exp_ignore_models=
 hdhr.extend_transcode_profile=
+hdhr.ignore_device_ids=
+hdhr.locking=true
 hdhr.qam.automap_reference_lookup=true
 hdhr.qam.automap_tuning_lookup=false
+hdhr.retry_count=2
+hdhr.retune_poll_s=1
+hdhr.wait_for_streaming=5000
 pm.enabled=true
 pm.network.resume_timeout_ms=120000
 pm.network.start_retry=120
@@ -31,7 +40,7 @@ sagetv.use_automatic_loopback=true
 upnp.dct.fast_tuning=false
 upnp.dct.hdhr_tuning=true
 upnp.dct.http_tuning=true
-upnp.new.device.schema_filter_strings_csv=schemas-cetoncorp-com,schemas-dkeystone-com
+upnp.new.device.schema_filter_strings_csv=schemas-cetoncorp-com
 upnp.new.device.search_strings_csv=schemas-cetoncorp-com,schemas-dkeystone-com
 upnp.qam.automap_reference_lookup=true
 upnp.qam.automap_tuning_lookup=false
