Defined heap at 128MB-768MB.

--- a/jsw/linux-x86/conf/wrapper.conf
+++ b/jsw/linux-x86/conf/wrapper.conf
@@ -58,10 +58,10 @@ wrapper.java.additional.1=-Dopendct_log_root=%LOGGING_HOME%
 wrapper.java.additional.2=-verbose:gc
 
 # Initial Java Heap Size (in MB)
-#wrapper.java.initmemory=3
+wrapper.java.initmemory=128
 
 # Maximum Java Heap Size (in MB)
-#wrapper.java.maxmemory=64
+wrapper.java.maxmemory=768
 
 # Application parameters.  Add parameters as needed starting from 1
 wrapper.app.parameter.1=opendct.Main
