--- a/jsw/windows-x86/conf/wrapper.conf
+++ b/jsw/windows-x86/conf/wrapper.conf
@@ -60,10 +60,10 @@ wrapper.java.additional.2=-XX:ErrorFile=%LOGGING_HOME%/hs_err_pid%p.log
 #wrapper.java.additional.2=-verbose:gc
 
 # Initial Java Heap Size (in MB)
-#wrapper.java.initmemory=3
+wrapper.java.initmemory=128
 
 # Maximum Java Heap Size (in MB)
-#wrapper.java.maxmemory=64
+wrapper.java.maxmemory=768
 
 # Application parameters.  Add parameters as needed starting from 1
 wrapper.app.parameter.1=opendct.Main
