--- a/build.gradle
+++ b/build.gradle
@@ -219,6 +219,12 @@ ospackage {
         fileMode 0755
     }
 
+    from('build/bin') {
+        include 'ccextractor/ccextractor'
+        into 'bin'
+        fileMode 0755
+    }
+
     from('scripts/any') {
         include '*'
         into ''
@@ -254,7 +260,14 @@ task buildLinux64(dependsOn: build) << {
 
 }
 
-def changeJsw(String arch, String dependency) {
+def changeBin(String arch, String dependency) {
+    delete 'build/bin'
+
+    copy {
+        from "bin/${arch}"
+        into 'build/bin'
+    }
+
     delete 'build/jsw'
 
     copy {
@@ -368,7 +381,7 @@ def packageWin(String arch) {
 task packageWin32(dependsOn: buildWin32) << {
     println 'Creating install package for Windows 32-bit...'
 
-    changeJsw('windows-x86', 'windows_x86')
+    changeBin('windows-x86', 'windows_x86')
 
     sourceWin()
 
@@ -383,7 +396,7 @@ task packageWin32(dependsOn: buildWin32) << {
 task packageWin64(dependsOn: buildWin64) << {
     println 'Creating install package for Windows 64-bit...'
 
-    changeJsw('windows-x86_64', 'windows_x86_64')
+    changeBin('windows-x86_64', 'windows_x86_64')
 
     sourceWin()
 
@@ -396,7 +409,7 @@ task packageWin64(dependsOn: buildWin64) << {
 }
 
 task jswLinux32() << {
-    changeJsw('linux-x86', 'linux_x86')
+    changeBin('linux-x86', 'linux_x86')
 }
 
 task packageRpm32(type: Rpm) {
@@ -477,7 +490,7 @@ task packageLinux32() {
 }
 
 task jswLinux64() << {
-    changeJsw('linux-x86_64', 'linux_x86_64')
+    changeBin('linux-x86_64', 'linux_x86_64')
 }
 
 task packageRpm64(type: Rpm) {
