Changed to G1GC for garbage collector.

--- a/jsw/windows-x86/conf/wrapper.conf
+++ b/jsw/windows-x86/conf/wrapper.conf
@@ -57,7 +57,8 @@ wrapper.java.additional.auto_bits=TRUE
 # Java Additional Parameters
 wrapper.java.additional.1=-Dopendct_log_root=%LOGGING_HOME%
 wrapper.java.additional.2=-XX:ErrorFile=%LOGGING_HOME%/hs_err_pid%p.log
-#wrapper.java.additional.2=-verbose:gc
+#wrapper.java.additional.3=-verbose:gc
+wrapper.java.additional.4=-XX:+UseG1GC
 
 # Initial Java Heap Size (in MB)
 wrapper.java.initmemory=128
