Removed exp from ignore_models in HDHomeRun configuration.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -37,7 +37,7 @@ hdhr.always_tune_legacy=false
 hdhr.broadcast_port=64998
 hdhr.broadcast_s=58
 hdhr.discoverer_enabled=true
-hdhr.exp_ignore_models=
+hdhr.ignore_models=
 hdhr.extend_transcode_profile=
 hdhr.ignore_device_ids=
 hdhr.locking=true
