Added custom options for CCExtractor.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -6,6 +6,7 @@ consumer.dynamic.channels.ffmpeg=
 consumer.dynamic.channels.raw=
 consumer.dynamic.default=opendct.consumer.FFmpegTransSageTVConsumerImpl
 consumer.ffmpeg.ccextractor_all_streams=true
+consumer.ffmpeg.ccextractor_custom_options=
 consumer.ffmpeg.ccextractor_enabled=false
 consumer.ffmpeg.circular_buffer_size=7864320
 consumer.ffmpeg.enhanced_logging=true
