--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -45,6 +45,7 @@ hdhr.retry_count=2
 hdhr.smart_broadcast=true
 hdhr.wait_for_offline_detection_s=8
 hdhr.wait_for_streaming=8500
+http.new.default_producer=opendct.producer.NIOHTTPProducerImpl
 log.min_free_space=1073741824
 log.remove_after_days=30
 pm.enabled=true
