--- a/build.gradle
+++ b/build.gradle
@@ -85,7 +85,8 @@ dependencies {
 	compile "org.apache.logging.log4j:log4j-api:${log4jVersion}"
     compile "org.apache.logging.log4j:log4j-core:${log4jVersion}"
 	compile 'commons-cli:commons-cli:1.3'
-	compile "net.java.dev.jna:jna:${jnaVersion}"
+    compile 'it.unimi.dsi:fastutil:7.0.12'
+    compile "net.java.dev.jna:jna:${jnaVersion}"
 	compile "net.java.dev.jna:jna-platform:${jnaVersion}"
 	compile "org.bytedeco.javacpp-presets:ffmpeg:${ffmpegVersion}"
 
