--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ ext {
     majorVersion = (versionText =~ /VERSION_MAJOR = ([0-9]+)/)[0][1]
     minorVersion = (versionText =~ /VERSION_MINOR = ([0-9]+)/)[0][1]
     buildVersion = (versionText =~ /VERSION_BUILD = ([0-9]+)/)[0][1]
-    buildType = "RC9"
+    buildType = "Stable"
 
     javaVersion = '1.7'
     buildVersion = "${majorVersion}.${minorVersion}.${buildVersion}"
@@ -586,7 +586,7 @@ bintray {
     dryRun = false //Whether to run this as dry-run, without deploying
     publish = true //If version should be auto published after an upload
     pkg {
-        repo = 'Beta'
+        repo = 'Release'
         name = 'OpenDCT'
         userOrg = 'opendct'
         desc = "OpenDCT Release"
