Increased wait_for_streaming to 15000ms.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -14,7 +14,7 @@ hdhr.extend_transcode_profile=
 hdhr.ignore_device_ids=
 hdhr.locking=true
 hdhr.retry_count=2
-hdhr.wait_for_streaming=8500
+hdhr.wait_for_streaming=15000
 pm.enabled=true
 pm.network.resume_timeout_ms=120000
 pm.network.start_retry=120
@@ -37,6 +37,7 @@ sagetv.use_automatic_loopback=true
 upnp.dct.fast_tuning=false
 upnp.dct.hdhr_tuning=true
 upnp.dct.http_tuning=true
+upnp.dct.wait_for_streaming=15000
 upnp.new.device.schema_filter_strings_csv=schemas-cetoncorp-com
 upnp.new.device.search_strings_csv=schemas-cetoncorp-com,schemas-dkeystone-com
 upnp.qam.automap_reference_lookup=true
