Increased wait_for_streaming to 15000.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -73,7 +73,7 @@ sagetv.new.device.socket_server_shared_port=9000
 sagetv.use_automatic_loopback=true
 upnp.device.offline_detection_min_bytes=18800
 upnp.device.wait_for_offline_detection_s=18
-upnp.dct.wait_for_streaming=15000
+upnp.device.wait_for_streaming=15000
 upnp.discoverer_enabled=true
 upnp.infinitv.device.schema_filter_strings_csv=schemas-cetoncorp-com
 upnp.legacy_capture_device=false
