Added option to bypass ClearQAM remap verification.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -32,6 +32,7 @@ consumer.raw.upload_id_port=7818
 discovery.enabled=true
 hdhr.allow_http_tuning=true
 hdhr.allow_qam_http_tuning=false
+hdhr.allow_qam_remapping=true
 hdhr.always_tune_legacy=false
 hdhr.broadcast_port=64998
 hdhr.broadcast_s=58
