--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -23,6 +23,7 @@ consumer.ffmpeg.thread_priority=8
 consumer.ffmpeg.thread_rename_logging=false
 consumer.ffmpeg.upload_id_enabled=false
 consumer.ffmpeg.upload_id_port=7818
+consumer.ffmpeg.use_codec_timebase=true
 consumer.raw.max_transfer_size=1048476
 consumer.raw.min_transfer_size=65536
 consumer.raw.stream_buffer_size=2097152
@@ -30,6 +31,11 @@ consumer.raw.thread_priority=8
 consumer.raw.upload_id_enabled=false
 consumer.raw.upload_id_port=7818
 discovery.enabled=true
+generic.http.device_names_csv=
+generic.http.discoverer_enabled=true
+generic.http.offline_detection_min_bytes=10528
+generic.http.wait_for_offline_detection_s=8
+generic.http.wait_for_streaming=15000
 hdhr.allow_http_tuning=true
 hdhr.allow_qam_http_tuning=false
 hdhr.allow_qam_remapping=true
