Removed pts hack and added CBR MPEG-TS.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -11,7 +11,6 @@ consumer.ffmpeg.ccextractor_enabled=false
 consumer.ffmpeg.circular_buffer_size=7864320
 consumer.ffmpeg.enhanced_logging=true
 consumer.ffmpeg.fix_stream=true
-consumer.ffmpeg.h264_pts_hack=false
 consumer.ffmpeg.limit_logging=true
 consumer.ffmpeg.linux_logging=true
 consumer.ffmpeg.log_stream_details_for_all_programs=false
@@ -24,6 +23,7 @@ consumer.ffmpeg.thread_rename_logging=false
 consumer.ffmpeg.upload_id_enabled=false
 consumer.ffmpeg.upload_id_port=7818
 consumer.ffmpeg.use_codec_timebase=true
+consumer.ffmpeg.use_mpegts_cbr=false
 consumer.raw.max_transfer_size=1048476
 consumer.raw.min_transfer_size=65536
 consumer.raw.stream_buffer_size=2097152
