Changed timebase mode back to off.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -22,7 +22,7 @@ consumer.ffmpeg.thread_priority=8
 consumer.ffmpeg.thread_rename_logging=false
 consumer.ffmpeg.upload_id_enabled=false
 consumer.ffmpeg.upload_id_port=7818
-consumer.ffmpeg.use_codec_timebase=true
+consumer.ffmpeg.use_codec_timebase=false
 consumer.ffmpeg.use_mpegts_cbr=false
 consumer.raw.max_transfer_size=1048476
 consumer.raw.min_transfer_size=65536
