--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ ext {
     winWixSource = 'build/wix/source'
     winWixConfig = 'build/wix/config'
 
-	ffmpegVersion = '3.0.2-1.2'
+	ffmpegVersion = '2.8.1-1.1'
 	log4jVersion = '2.5'
     jnaVersion = '4.2.1'
 
@@ -92,8 +92,8 @@ dependencies {
     compile 'org.nanohttpd:nanohttpd:2.3.0'
     compile 'org.nanohttpd:nanohttpd-nanolets:2.3.0'
     compile 'com.google.code.gson:gson:2.6.2'
-    compile 'org.bytedeco:javacpp:1.2.1'
-    //compile ("org.bytedeco.javacpp-presets:ffmpeg:${ffmpegVersion}") { transitive = false }
+    compile 'org.bytedeco:javacpp:1.1'
+    compile ("org.bytedeco.javacpp-presets:ffmpeg:${ffmpegVersion}") { transitive = false }
 
     windows_x86 configurations.compile
 	windows_x86 ("org.bytedeco.javacpp-presets:ffmpeg:${ffmpegVersion}:windows-x86") { transitive = false }
@@ -138,6 +138,14 @@ idea {
         } else {
             scopes.TEST.plus += [configurations.linux_x86]
             scopes.TEST.plus += [configurations.linux_x86_64]
+        }
+
+        if (OperatingSystem.current().isWindows()) {
+            scopes.COMPILE.plus += [configurations.windows_x86]
+            scopes.COMPILE.plus += [configurations.windows_x86_64]
+        } else {
+            scopes.COMPILE.plus += [configurations.linux_x86]
+            scopes.COMPILE.plus += [configurations.linux_x86_64]
         }
 
         downloadJavadoc = true
