Changed web interface port ot 9091. 9090 is used by cockpit.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -23,7 +23,6 @@ consumer.ffmpeg.thread_rename_logging=false
 consumer.ffmpeg.upload_id_enabled=false
 consumer.ffmpeg.upload_id_port=7818
 consumer.ffmpeg.use_compat_timebase=false
-consumer.ffmpeg.use_mpegts_cbr=false
 consumer.raw.max_transfer_size=1048476
 consumer.raw.min_transfer_size=65536
 consumer.raw.stream_buffer_size=2097152
@@ -93,3 +92,5 @@ upnp.service.configuration.ignore_interfaces_csv=
 upnp.service.configuration.ignore_local_ip_csv=
 upnp.smart_broadcast=true
 version.first_run=true
+web.enabled=true
+web.port=9091
