--- a/jsw/linux-x86_64/conf/wrapper.conf
+++ b/jsw/linux-x86_64/conf/wrapper.conf
@@ -55,9 +55,11 @@ wrapper.java.additional.auto_bits=TRUE
 
 # Java Additional Parameters
 wrapper.java.additional.1=-Dopendct_log_root=%LOGGING_HOME%
-wrapper.java.additional.2=-XX:ErrorFile=%LOGGING_HOME%/hs_err_pid%p.log
-wrapper.java.additional.3=-verbose:gc
-wrapper.java.additional.4=-XX:+UseG1GC
+wrapper.java.additional.2=-Dconfig_dir=%CONFIG_HOME%
+wrapper.java.additional.3=-Ddaemon_mode=true
+wrapper.java.additional.4=-XX:ErrorFile=%LOGGING_HOME%/hs_err_pid%p.log
+wrapper.java.additional.5=-verbose:gc
+wrapper.java.additional.6=-XX:+UseG1GC
 
 # Initial Java Heap Size (in MB)
 wrapper.java.initmemory=128
@@ -67,9 +69,6 @@ wrapper.java.maxmemory=768
 
 # Application parameters.  Add parameters as needed starting from 1
 wrapper.app.parameter.1=opendct.Main
-wrapper.app.parameter.2=--daemon
-wrapper.app.parameter.3=--config-dir=%CONFIG_HOME%
-wrapper.app.parameter.4=--log-to-console=false
 
 #********************************************************************
 # Wrapper Logging Properties
