Added option to force MPEG2-PS when using the Media Server.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -23,6 +23,12 @@ consumer.ffmpeg.thread_rename_logging=false
 consumer.ffmpeg.upload_id_enabled=false
 consumer.ffmpeg.upload_id_port=7818
 consumer.ffmpeg.use_compat_timebase=false
+consumer.media_server.max_transfer_size=1048476
+consumer.media_server.min_transfer_size=64672
+consumer.media_server.prefer_ps=true
+consumer.media_server.stream_buffer_size=2097152
+consumer.media_server.thread_priority=8
+consumer.media_server.upload_id_port=7818
 consumer.raw.max_transfer_size=1048476
 consumer.raw.min_transfer_size=65536
 consumer.raw.stream_buffer_size=2097152
