--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -3,6 +3,7 @@ channels.qam.automap_reference_lookup=true
 channels.qam.automap_tuning_lookup=true
 channels.update=true
 consumer.dynamic.channels.ffmpeg=
+consumer.dynamic.channels.media_server=
 consumer.dynamic.channels.raw=
 consumer.dynamic.default=opendct.consumer.FFmpegTransSageTVConsumerImpl
 consumer.ffmpeg.ccextractor_all_streams=true
@@ -88,8 +89,6 @@ upnp.device.wait_for_offline_detection_s=18
 upnp.device.wait_for_streaming=15000
 upnp.discoverer_enabled=true
 upnp.infinitv.device.schema_filter_strings_csv=schemas-cetoncorp-com
-upnp.legacy_capture_device=false
-upnp.legacy_enabled=false
 upnp.new.device.schema_filter_strings_csv=schemas-cetoncorp-com
 upnp.new.device.search_interval_s=4
 upnp.new.device.search_strings_csv=schemas-cetoncorp-com
