Updated release notes, refactored offline to ping for clarity, incremented version.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -85,6 +85,8 @@ sagetv.new.device.socket_server_port_low=9001
 sagetv.new.device.socket_server_shared_port=9000
 sagetv.use_automatic_loopback=true
 upnp.device.offline_detection_min_bytes=18800
+upnp.device.ping_detection=false
+upnp.device.ping_timeout_ms=15000
 upnp.device.wait_for_offline_detection_s=18
 upnp.device.wait_for_streaming=15000
 upnp.discoverer_enabled=true
