Added a way to disable direct allocation of the very large circular buffers for special situations.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -1,4 +1,5 @@
 #OpenDCT Configuration File
+buffers.nio.direct=true
 channels.qam.automap_reference_lookup=true
 channels.qam.automap_tuning_lookup=true
 channels.update=true
