Clarified what the line for defining the Java path actually does and that it is ignored by default.

--- a/jsw/windows-x86_64/conf/wrapper.conf
+++ b/jsw/windows-x86_64/conf/wrapper.conf
@@ -2,6 +2,7 @@
 # Configuration files must begin with a line specifying the encoding
 #  of the the file.
 
+# If JSW is unable to find your Java binary, you can set the path here. JAVA_HOME is not used by default.
 # If you set this path, be sure to uncomment wrapper.java.command=%JAVA_HOME%/bin/java below.
 set.JAVA_HOME=c:/Program Files/Java/jre1.8.0_66
 set.OPENDCT_HOME=..
