Reworded property for consistency.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -67,6 +67,7 @@ pm.network.resume_timeout_ms=120000
 pm.network.start_retry=120
 pool.enabled=false
 producer.rtp.nio.native_udp_receive_buffer=5312000
+retune_enable=true
 rtsp.new.default_impl=opendct.video.rtsp.DCTRTSPClientImpl
 rtsp.port_high=8500
 rtsp.port_low=8300
