Added new features and fixed some grammatical errors.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -38,6 +38,7 @@ consumer.raw.thread_priority=8
 consumer.raw.upload_id_enabled=false
 consumer.raw.upload_id_port=7818
 discovery.enabled=true
+error_videos_enabled=true
 generic.http.device_names_csv=
 generic.http.discoverer_enabled=true
 generic.http.offline_detection_min_bytes=10528
@@ -47,6 +48,7 @@ hdhr.allow_http_tuning=true
 hdhr.allow_qam_http_tuning=false
 hdhr.allow_qam_remapping=true
 hdhr.always_tune_legacy=false
+hdhr.always_remap_lookup=false
 hdhr.broadcast_port=64998
 hdhr.broadcast_s=58
 hdhr.discoverer_enabled=true
@@ -57,6 +59,7 @@ hdhr.locking=true
 hdhr.offline_detection_min_bytes=10528
 hdhr.retry_count=2
 hdhr.smart_broadcast=true
+hdhr.static_addresses_csv=
 hdhr.wait_for_offline_detection_s=8
 hdhr.wait_for_streaming=15000
 http.new.default_producer=opendct.producer.NIOHTTPProducerImpl
@@ -86,6 +89,7 @@ sagetv.new.device.socket_server_port_high=9100
 sagetv.new.device.socket_server_port_low=9001
 sagetv.new.device.socket_server_shared_port=9000
 sagetv.use_automatic_loopback=true
+upnp.always_remap_lookup=false
 upnp.device.offline_detection_min_bytes=18800
 upnp.device.ping_detection=false
 upnp.device.ping_timeout_ms=15000
