Updated change log and added missing properties to default properties file.

--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -19,6 +19,7 @@ consumer.ffmpeg.log_stream_details_for_all_programs=false
 consumer.ffmpeg.min_direct_flush_size=1048576
 consumer.ffmpeg.min_probe_size=165440
 consumer.ffmpeg.min_upload_id_transfer_size=262144
+consumer.ffmpeg.no_program_timeout_ms
 consumer.ffmpeg.rw_buffer_size=262144
 consumer.ffmpeg.thread_priority=8
 consumer.ffmpeg.thread_rename_logging=false
