--- a/src/main/resources/opendct.properties
+++ b/src/main/resources/opendct.properties
@@ -42,9 +42,10 @@ discovery.enabled=true
 error_videos_enabled=true
 generic.http.device_names_csv=
 generic.http.discoverer_enabled=true
-generic.http.offline_detection_min_bytes=10528
-generic.http.wait_for_offline_detection_s=8
 generic.http.wait_for_streaming=15000
+generic.pipe.device_names_csv=
+generic.pipe.discoverer_enabled=true
+generic.pipe.wait_for_streaming=15000
 hdhr.allow_http_tuning=true
 hdhr.allow_qam_http_tuning=false
 hdhr.allow_qam_remapping=true
